...
                                    <stackView opaque="NO" contentMode="scaleAspectFill" fixedFrame="YES" axis="vertical" distribution="equalSpacing" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="uaX-qH-pRF">
                                        <rect key="frame" x="8" y="8" width="340" height="645"/>
                                        <subviews>
                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ParkersIcon" translatesAutoresizingMaskIntoConstraints="NO" id="vik-qf-wXa">
                                                <rect key="frame" x="0.0" y="0.0" width="340" height="148"/>
                                            </imageView>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SpV-Jr-neD">
                                                <rect key="frame" x="0.0" y="168" width="340" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Name"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" textContentType="name"/>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="754" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Surname" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="f3L-9e-Amj">
                                                <rect key="frame" x="0.0" y="222" width="340" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Surname"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" textContentType="family-name"/>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="751" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QXJ-NE-Y9P">
                                                <rect key="frame" x="0.0" y="276" width="340" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Email"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" textContentType="email"/>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="752" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" background="eye.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="eXq-At-1GD"
                                                <rect key="frame" x="0.0" y="330" width="340" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Password"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" textContentType="password"/>
                                                <connections>
                                                    <action selector="passwordTextbox:" destination="otX-AA-kiq" eventType="editingChanged" id="POz-yY-Jay"/>
                                                </connections>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="753" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password Confirm" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XLU-Jz-sPH">
                                                <rect key="frame" x="0.0" y="384" width="340" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Password Confirm"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" textContentType="password"/>
                                            </textField>
                                            <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="754" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N0r-B0-t3D">
...
