...
                                                <connections>
                                                    <action selector="loginButtonClicked:" destination="rN4-t7-Elb" eventType="touchUpInside" id="5ht-DX-3Iq"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YKa-2s-c7a">
                                                <rect key="frame" x="18" y="320" width="51" height="43"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Üye Ol"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <state key="normal" title="Üye Ol">
                                                    <color key="titleColor" red="0.18289321659999999" green="0.41205567119999997" blue="0.58041328189999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                </state>
                                                <connections>
                                                    <action selector="newUserButtonClicked:" destination="rN4-t7-Elb" eventType="touchUpInside" id="b8y-g1-0LB"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pou-mR-xp0">
                                                <rect key="frame" x="175" y="320" width="180" height="43"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Üye Olmadan Devam Et"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <state key="normal" title="Üye Olmadan Devam Et">
                                                    <color key="titleColor" red="0.18289321659999999" green="0.41205567119999997" blue="0.58041328189999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                </state>
                                                <connections>
                                                    <action selector="noUserButtonClicked:" destination="rN4-t7-Elb" eventType="touchUpInside" id="p4Z-2K-GsE"/>
...
