...
    
    var viewModel = MapViewModel()
    
    @IBOutlet weak var editProfileButton: UIBarButtonItem!
    @IBOutlet weak var mapView: MKMapView!
    @IBOutlet weak var backButton: UIBarButtonItem!
    @IBOutlet weak var arrowButton: UIButton!
    
    let locationManager = CLLocationManager()
    let visibleRadiusForUser: Double = 2000.0
    let regionRadius: Double = 10000.0
    let coordinate = CLLocationCoordinate2D(latitude: 41.033393, longitude: 29.047944)
    let uid = (Auth.auth().currentUser?.uid)
...
